# avatar

./: .gitignore  CLAUDE.md  avatar-app.py  avatar.md  launch.py  package.json  readme.md  requirement.txt  requirements.txt  setup.cfg  setup.md
backend/: launch_script.py  requirements.txt  setup_script.py  tts_controller.js  tts_server.py
backend/assets/: phoneme_map.json
frontend/: index.html  package.json
frontend/css/: enhanced-style.css  style.css
frontend/html/: index.html
frontend/js/: app.js  audio-player.js  audio_player.js  avatar-controller.js  avatar_controller.js  configuration.js  emotion-analyzer.js  emotion_analyzer.js  enhanced_app_controller.js  enhanced_avatar_controller.js  lipsync_controller.js  tts_controller.js
src/: __init__.py  main.py
src/audio/: __init__.py  audio_processor.py
src/core/: __init__.py  app_window.py  events.py
src/core/media/: __init__.py  audio_processor.py  media_manager.py
src/core/processors/: __init__.py  audio_processor.py  image_processor.py
src/core/ui/: __init__.py
src/core/ui/components/: __init__.py  audio_dropzone.py  avatar_zone.py  modern_button.py  playback_controls.py
src/core/ui/styles/: __init__.py  theme.py
src/core/utils/: __init__.py  event_manager.py
src/core/window/: __init__.py  window_manager.py
src/image/: __init__.py  image_processor.py
src/lipsync/: __init__.py  lipsync_processor.py
src/ui/: __init__.py  audio_dropzone.py  avatar_zone.py  modern_button.py  playback_controls.py
src/utils/: __init__.py
