[build_ext]
inplace=1

[pep8]
max-line-length=120

[pycodestyle]
max-line-length=120

[tool:pytest]
python_files = test_*.py
testpaths = tests

[compile_catalog]
directory = locale
domain = avatar
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = locale/avatar.pot
width = 80

[init_catalog]
domain = avatar
input_file = locale/avatar.pot
output_dir = locale

[update_catalog]
domain = avatar
input_file = locale/avatar.pot
output_dir = locale

[bdist_wheel]
universal = 1

[options]
python_requires = >=3.8
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
exclude =
    tests
    tests.*
    *.tests
    *.tests.*

[options.package_data]
* = *.txt, *.rst, *.md

[options.extras_require]
test =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 120
exclude = .tox,.eggs,ci/templates,build,dist

[pep8]
max-line-length = 120

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[pycache]
# Store all .pyc files in a single directory
pycache-prefix = ./__pycache__
# Use timestamps for invalidation
 